force-app/main/default/objects/Zendesk__ZendeskSession__c/Zendesk__ZendeskSession__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To store sort order and filters</description>
    <label>Zendesk Session Deprecated</label>
</CustomObject>