force-app/main/default/objects/Zendesk__ZendeskSession__c/fields/Zendesk__AccountNameOverride__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__AccountNameOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Name Override</label>
    <type>Checkbox</type>
</CustomField>