force-app/main/default/objects/Zendesk__ZendeskSession__c/fields/Zendesk__password__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__password__c</fullName>
    <label>Password</label>
    <length>80</length>
    <type>Text</type>
</CustomField>