force-app/main/default/objects/Zendesk__ZendeskSession__c/fields/Zendesk__PriorityFilter__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__PriorityFilter__c</fullName>
    <description>Be careful when changing the label as it may affect existing merge templates.</description>
    <label>Account Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>