force-app/main/default/objects/Zendesk__ZendeskSession__c/fields/Zendesk__SortDesc__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__SortDesc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sort Descending</label>
    <type>Checkbox</type>
</CustomField>