force-app/main/default/objects/Zendesk__ZendeskSession__c/fields/Zendesk__StatusFilter__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__StatusFilter__c</fullName>
    <label>Status Filter</label>
    <length>16</length>
    <type>Text</type>
</CustomField>