force-app/main/default/objects/Zendesk__ZendeskSession__c/fields/Zendesk__TypeFilter__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__TypeFilter__c</fullName>
    <label>Type Filter</label>
    <length>32</length>
    <type>Text</type>
</CustomField>