force-app/main/default/objects/Zendesk__ZendeskSession__c/fields/Zendesk__url__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__url__c</fullName>
    <label>Zendesk URL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>